# blockbase

./: .gitpod.dockerfile  .metadata  Makefile  ffigen.yaml  history.txt  pubspec.yaml
.devcontainer/: Dockerfile  setup.sh
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
go/: Makefile  README.md  go.mod  go.sum  lib.go  main.go
go/core/: types.go  wallet.go
go/core/ton/: address.go  seed.go  ton.go  tonkeeper.go
go/core/trx/: trx.go
go/pkg/coin/: coin.go
go/pkg/eth/: eth.go
go/pkg/tron/: tron.go
go/pkg/wallet/: wallet.go
go/wallet/: mobile.go  test.go  wallet.go
ios/: blockbase.podspec
ios/Classes/: WalletBasePlugin.swift  bindings.h  blockbase.c
lib/: blockbase.dart  blockbase_bindings_generated.dart  common.dart
native/tronbase/: Cargo.toml
native/web3base/: Cargo.toml
rust/: Cargo.toml  Makefile
rust/keys/: Cargo.toml
rust/keys/src/: error.rs  lib.rs  private.rs  signature.rs
rust/src/: lib.rs
rust/tron/: Cargo.toml
rust/tron/src/: lib.rs  main.rs  sign.rs
src/: CMakeLists.txt  blockbase.c
