[package]
name = "tron_wallet"
version = "0.1.0"
authors = ["mmmlll <mmmlll@gmail.com>"]
edition = "2021"

[lib]
name = "tron_sdk"
crate-type = ["staticlib", "cdylib"]

[dependencies]
anychain-tron = "0.1.1"
hex = "0.4"
keys = { path = "../keys" }
# ethers = { version = "2.0", features = ["rustls"] }
# web3 = { version = "0.18.0", default-features = false, features = ["http-rustls-tls", "signing", ""] }
